--- a/main.css
+++ b/main.css
@@ -1,5 +1,8 @@
 footer {
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: aliceblue;
+  background-color: brown;
+}
+h4 {
+color: aqua;
 }
